Table users {
  id bigint [pk, increment]
  name varchar [not null]
  email varchar [not null]
  phone varchar [not null]
  password varchar [not null]
  avatar varchar [not null]
  role enum [not null]
  status enum [not null]
  email_verified_at timestamp [not null]
  remember_token varchar
  deleted_at timestamp
  created_at timestamp
  updated_at timestamp
  apartment_id bigint [not null]
  cccd varchar [not null]
  banned_posting_until timestamp [not null]
  banned_commenting_until timestamp [not null]
}

Table apartments {
  id bigint [pk, increment]
  floor_id bigint [not null]
  apartment_number varchar [not null]
  area decimal [not null]
  status enum [not null]
  description text [not null]
  deleted_at timestamp
  created_at timestamp
  updated_at timestamp
  // Index: ['floor_id', 'apartment_number']
}

Table residents {
  id bigint [pk, increment]
  user_id bigint [not null]
  apartment_id bigint [not null]
  invite_id bigint [not null]
  relationship enum [not null]
  temporary_status enum [not null]
  start_date date [not null]
  end_date date [not null]
  deleted_at timestamp
  created_at timestamp
  updated_at timestamp
  // Index: ['user_id', 'apartment_id']
}

Table vehicles {
  id bigint [pk, increment]
  apartment_id bigint [not null]
  parking_lot_id bigint [not null]
  license_plate varchar [not null]
  brand varchar [not null]
  image varchar [not null]
  qr_code varchar [not null]
  deleted_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table utility_meters {
  id bigint [pk, increment]
  apartment_id bigint [not null]
  type enum [not null]
  record_month smallint [not null]
  record_year smallint [not null]
  old_value integer [not null]
  ocr_value integer [not null]
  new_value integer [not null]
  usage_amount integer [not null]
  image_proof varchar [not null]
  recorded_by bigint [not null]
  created_at timestamp
  updated_at timestamp
  // Index: ['apartment_id', 'type', 'record_month', 'record_year'], 'utility_meters_period_unique'
  // Index: 'type', 'idx_meter_type'
  status enum [not null]
  is_reset boolean [not null]
  rejected_by bigint [not null]
  reject_reason varchar [not null]
  images text [not null]
}

Table bills {
  id bigint [pk, increment]
  apartment_id bigint [not null]
  title varchar [not null]
  billing_month smallint [not null]
  billing_year smallint [not null]
  due_date date [not null]
  total_amount decimal [not null]
  status enum [not null]
  deleted_at timestamp
  created_at timestamp
  updated_at timestamp
  // Index: ['billing_year', 'billing_month'], 'idx_bills_month'
  paid_amount decimal [not null]
  created_by bigint [not null]
}

Table bill_details {
  id bigint [pk, increment]
  bill_id bigint [not null]
  service_price_id bigint [not null]
  quantity decimal [not null]
  amount decimal [not null]
  created_at timestamp [not null]
  status varchar [not null]
}

Table payments {
  id bigint [pk, increment]
  bill_id bigint [not null]
  amount decimal [not null]
  payment_method enum [not null]
  transaction_code varchar [not null]
  status enum [not null]
  paid_at timestamp [not null]
  deleted_at timestamp
  created_at timestamp
  updated_at timestamp
  // Index: 'status', 'idx_payments_status'
  note text [not null]
  recorded_by bigint [not null]
  refunded_at timestamp [not null]
  refund_note text [not null]
  refunded_by bigint [not null]
  receipt_code varchar [not null]
  vnp_txn_ref varchar [not null]
  proof_image varchar [not null]
  payer_name varchar [not null]
}

Table tickets {
  id bigint [pk, increment]
  apartment_id bigint [not null]
  sender_id bigint [not null]
  handler_id bigint [not null]
  title varchar [not null]
  description text [not null]
  image varchar [not null]
  priority enum [not null]
  status enum [not null]
  rating smallint [not null]
  feedback_comment text [not null]
  deleted_at timestamp
  created_at timestamp
  updated_at timestamp
  // Index: 'status', 'idx_tickets_status'
  images json [not null]
  reopened_count smallint [not null]
}

Table ticket_progress {
  id bigint [pk, increment]
  ticket_id bigint [not null]
  status varchar [not null]
  comment text [not null]
  image_proof varchar [not null]
  updated_by bigint [not null]
  created_at timestamp [not null]
}

Table facility_bookings {
  id bigint [pk, increment]
  facility_id bigint [not null]
  user_id bigint [not null]
  booking_date date [not null]
  start_time time [not null]
  end_time time [not null]
  status enum [not null]
  created_at timestamp
  updated_at timestamp
  number_of_people integer [not null]
  qr_code varchar [not null]
  checked_in_at datetime [not null]
  payment_status enum [not null]
  payment_method varchar [not null]
  bill_id bigint [not null]
}

// Relationships
Ref: apartments.id < users.apartment_id
Ref: users.id < residents.user_id
Ref: apartments.id < residents.apartment_id
Ref: apartments.id < vehicles.apartment_id
Ref: apartments.id < utility_meters.apartment_id
Ref: users.id < utility_meters.recorded_by
Ref: users.id < utility_meters.rejected_by
Ref: apartments.id < bills.apartment_id
Ref: users.id < bills.created_by
Ref: bills.id < bill_details.bill_id
Ref: bills.id < payments.bill_id
Ref: users.id < payments.recorded_by
Ref: users.id < payments.refunded_by
Ref: apartments.id < tickets.apartment_id
Ref: users.id < tickets.sender_id
Ref: users.id < tickets.handler_id
Ref: tickets.id < ticket_progress.ticket_id
Ref: users.id < ticket_progress.updated_by
Ref: users.id < facility_bookings.user_id
Ref: bills.id < facility_bookings.bill_id